src/parser/parser.output
Terminals unused in grammar

    ALTER
    EXECUTE
    PREPARE
    PATH
    POLYGON
    BLOB
    BITMAP
    NUMBER


Grammar

    0 $accept: input_pattern $end

    1 input_pattern: statement_list semicolon

    2 statement_list: statement
    3               | statement_list ';' statement

    4 statement: create_statement
    5          | drop_statement
    6          | copy_statement
    7          | show_statement
    8          | select_statement
    9          | delete_statement
   10          | update_statement
   11          | insert_statement
   12          | explain_statement
   13          | flush_statement
   14          | optimize_statement
   15          | command_statement

   16 explainable_statement: create_statement
   17                      | drop_statement
   18                      | copy_statement
   19                      | show_statement
   20                      | select_statement
   21                      | delete_statement
   22                      | update_statement
   23                      | insert_statement
   24                      | flush_statement
   25                      | optimize_statement
   26                      | command_statement

   27 create_statement: CREATE DATABASE if_not_exists IDENTIFIER
   28                 | CREATE COLLECTION if_not_exists table_name
   29                 | CREATE TABLE if_not_exists table_name '(' table_element_array ')'
   30                 | CREATE TABLE if_not_exists table_name AS select_statement
   31                 | CREATE VIEW if_not_exists table_name optional_identifier_array AS select_statement
   32                 | CREATE INDEX if_not_exists_info ON table_name index_info_list

   33 table_element_array: table_element
   34                    | table_element_array ',' table_element

   35 table_element: table_column
   36              | table_constraint

   37 table_column: IDENTIFIER column_type
   38             | IDENTIFIER column_type column_constraints

   39 column_type: BOOLEAN
   40            | TINYINT
   41            | SMALLINT
   42            | INTEGER
   43            | INT
   44            | BIGINT
   45            | HUGEINT
   46            | FLOAT
   47            | REAL
   48            | DOUBLE
   49            | DATE
   50            | TIME
   51            | DATETIME
   52            | TIMESTAMP
   53            | UUID
   54            | POINT
   55            | LINE
   56            | LSEG
   57            | BOX
   58            | CIRCLE
   59            | CHAR
   60            | CHAR '(' LONG_VALUE ')'
   61            | VARCHAR
   62            | DECIMAL '(' LONG_VALUE ',' LONG_VALUE ')'
   63            | DECIMAL '(' LONG_VALUE ')'
   64            | DECIMAL
   65            | EMBEDDING '(' BIT ',' LONG_VALUE ')'
   66            | EMBEDDING '(' TINYINT ',' LONG_VALUE ')'
   67            | EMBEDDING '(' SMALLINT ',' LONG_VALUE ')'
   68            | EMBEDDING '(' INTEGER ',' LONG_VALUE ')'
   69            | EMBEDDING '(' INT ',' LONG_VALUE ')'
   70            | EMBEDDING '(' BIGINT ',' LONG_VALUE ')'
   71            | EMBEDDING '(' FLOAT ',' LONG_VALUE ')'
   72            | EMBEDDING '(' DOUBLE ',' LONG_VALUE ')'
   73            | VECTOR '(' BIT ',' LONG_VALUE ')'
   74            | VECTOR '(' TINYINT ',' LONG_VALUE ')'
   75            | VECTOR '(' SMALLINT ',' LONG_VALUE ')'
   76            | VECTOR '(' INTEGER ',' LONG_VALUE ')'
   77            | VECTOR '(' INT ',' LONG_VALUE ')'
   78            | VECTOR '(' BIGINT ',' LONG_VALUE ')'
   79            | VECTOR '(' FLOAT ',' LONG_VALUE ')'
   80            | VECTOR '(' DOUBLE ',' LONG_VALUE ')'

   81 column_constraints: column_constraint
   82                   | column_constraints column_constraint

   83 column_constraint: PRIMARY KEY
   84                  | UNIQUE
   85                  | NULLABLE
   86                  | NOT NULLABLE

   87 table_constraint: PRIMARY KEY '(' identifier_array ')'
   88                 | UNIQUE '(' identifier_array ')'

   89 identifier_array: IDENTIFIER
   90                 | identifier_array ',' IDENTIFIER

   91 delete_statement: DELETE FROM table_name where_clause

   92 insert_statement: INSERT INTO table_name optional_identifier_array VALUES expr_array_list
   93                 | INSERT INTO table_name optional_identifier_array select_without_paren

   94 optional_identifier_array: '(' identifier_array ')'
   95                          | ε

   96 explain_statement: EXPLAIN explain_type explainable_statement

   97 explain_type: ANALYZE
   98             | AST
   99             | RAW
  100             | LOGICAL
  101             | PHYSICAL
  102             | PIPELINE
  103             | FRAGMENT
  104             | ε

  105 update_statement: UPDATE table_name SET update_expr_array where_clause

  106 update_expr_array: update_expr
  107                  | update_expr_array ',' update_expr

  108 update_expr: IDENTIFIER '=' expr

  109 drop_statement: DROP DATABASE if_exists IDENTIFIER
  110               | DROP COLLECTION if_exists table_name
  111               | DROP TABLE if_exists table_name
  112               | DROP VIEW if_exists table_name
  113               | DROP INDEX if_exists IDENTIFIER ON table_name

  114 copy_statement: COPY table_name TO file_path WITH '(' copy_option_list ')'
  115               | COPY table_name FROM file_path WITH '(' copy_option_list ')'

  116 select_statement: select_without_paren
  117                 | select_with_paren
  118                 | select_statement set_operator select_clause_without_modifier_paren
  119                 | select_statement set_operator select_clause_without_modifier

  120 select_with_paren: '(' select_without_paren ')'
  121                  | '(' select_with_paren ')'

  122 select_without_paren: with_clause select_clause_with_modifier

  123 select_clause_with_modifier: select_clause_without_modifier order_by_clause limit_expr offset_expr

  124 select_clause_without_modifier_paren: '(' select_clause_without_modifier ')'
  125                                     | '(' select_clause_without_modifier_paren ')'

  126 select_clause_without_modifier: SELECT distinct expr_array from_clause search_clause where_clause group_by_clause having_clause

  127 order_by_clause: ORDER BY order_by_expr_list
  128                | ε

  129 order_by_expr_list: order_by_expr
  130                   | order_by_expr_list ',' order_by_expr

  131 order_by_expr: expr order_by_type

  132 order_by_type: ASC
  133              | DESC
  134              | ε

  135 limit_expr: LIMIT expr
  136           | ε

  137 offset_expr: OFFSET expr
  138            | ε

  139 distinct: DISTINCT
  140         | ε

  141 from_clause: FROM table_reference
  142            | ε

  143 search_clause: SEARCH sub_search_array
  144              | ε

  145 where_clause: WHERE expr
  146             | ε

  147 having_clause: HAVING expr
  148              | ε

  149 group_by_clause: GROUP BY expr_array
  150                | ε

  151 set_operator: UNION
  152             | UNION ALL
  153             | INTERSECT
  154             | EXCEPT

  155 table_reference: table_reference_unit
  156                | table_reference ',' table_reference_unit

  157 table_reference_unit: table_reference_name
  158                     | join_clause

  159 table_reference_name: table_name table_alias
  160                     | '(' select_statement ')' table_alias

  161 table_name: IDENTIFIER
  162           | IDENTIFIER '.' IDENTIFIER

  163 table_alias: AS IDENTIFIER
  164            | IDENTIFIER
  165            | AS IDENTIFIER '(' identifier_array ')'
  166            | ε

  167 with_clause: WITH with_expr_list
  168            | ε

  169 with_expr_list: with_expr
  170               | with_expr_list ',' with_expr

  171 with_expr: IDENTIFIER AS '(' select_clause_with_modifier ')'

  172 join_clause: table_reference_unit NATURAL JOIN table_reference_name
  173            | table_reference_unit join_type JOIN table_reference_name ON expr

  174 join_type: INNER
  175          | LEFT
  176          | RIGHT
  177          | OUTER
  178          | FULL
  179          | CROSS
  180          | ε

  181 show_statement: SHOW DATABASES
  182               | SHOW TABLES
  183               | SHOW VIEWS
  184               | SHOW CONFIGS
  185               | SHOW PROFILES
  186               | SHOW SESSION STATUS
  187               | SHOW GLOBAL STATUS
  188               | DESCRIBE table_name
  189               | DESCRIBE table_name SEGMENTS
  190               | DESCRIBE table_name SEGMENT LONG_VALUE
  191               | DESCRIBE table_name SEGMENT LONG_VALUE BLOCK LONG_VALUE
  192               | DESCRIBE INDEX table_name

  193 flush_statement: FLUSH DATA
  194                | FLUSH LOG
  195                | FLUSH BUFFER

  196 optimize_statement: OPTIMIZE table_name

  197 command_statement: USE IDENTIFIER
  198                  | EXPORT PROFILE LONG_VALUE file_path
  199                  | SET SESSION IDENTIFIER ON
  200                  | SET SESSION IDENTIFIER OFF
  201                  | SET SESSION IDENTIFIER STRING
  202                  | SET SESSION IDENTIFIER LONG_VALUE
  203                  | SET SESSION IDENTIFIER DOUBLE_VALUE
  204                  | SET GLOBAL IDENTIFIER ON
  205                  | SET GLOBAL IDENTIFIER OFF
  206                  | SET GLOBAL IDENTIFIER STRING
  207                  | SET GLOBAL IDENTIFIER LONG_VALUE
  208                  | SET GLOBAL IDENTIFIER DOUBLE_VALUE

  209 expr_array: expr_alias
  210           | expr_array ',' expr_alias

  211 expr_array_list: '(' expr_array ')'
  212                | expr_array_list ',' '(' expr_array ')'

  213 expr_alias: expr AS IDENTIFIER
  214           | expr

  215 expr: operand
  216     | subquery_expr
  217     | in_expr
  218     | between_expr
  219     | conjunction_expr

  220 operand: '(' expr ')'
  221        | '(' select_without_paren ')'
  222        | constant_expr
  223        | column_expr
  224        | function_expr
  225        | case_expr
  226        | cast_expr
  227        | knn_expr
  228        | match_expr
  229        | query_expr
  230        | fusion_expr

  231 knn_expr: KNN '(' expr ',' array_expr ',' STRING ',' STRING ',' LONG_VALUE ')' with_index_param_list

  232 match_expr: MATCH '(' STRING ',' STRING ')'
  233           | MATCH '(' STRING ',' STRING ',' STRING ')'

  234 query_expr: QUERY '(' STRING ')'
  235           | QUERY '(' STRING ',' STRING ')'

  236 fusion_expr: FUSION '(' STRING ')'
  237            | FUSION '(' STRING ',' STRING ')'

  238 sub_search_array: knn_expr
  239                 | match_expr
  240                 | query_expr
  241                 | fusion_expr
  242                 | sub_search_array ',' knn_expr
  243                 | sub_search_array ',' match_expr
  244                 | sub_search_array ',' query_expr
  245                 | sub_search_array ',' fusion_expr

  246 function_expr: IDENTIFIER '(' ')'
  247              | IDENTIFIER '(' expr_array ')'
  248              | IDENTIFIER '(' DISTINCT expr_array ')'
  249              | operand IS NOT NULLABLE
  250              | operand IS NULLABLE
  251              | NOT operand
  252              | '-' operand
  253              | '+' operand
  254              | operand '-' operand
  255              | operand '+' operand
  256              | operand '*' operand
  257              | operand '/' operand
  258              | operand '%' operand
  259              | operand '=' operand
  260              | operand EQUAL operand
  261              | operand NOT_EQ operand
  262              | operand '<' operand
  263              | operand '>' operand
  264              | operand LESS_EQ operand
  265              | operand GREATER_EQ operand
  266              | EXTRACT '(' STRING FROM operand ')'
  267              | operand LIKE operand
  268              | operand NOT LIKE operand

  269 conjunction_expr: expr AND expr
  270                 | expr OR expr

  271 between_expr: operand BETWEEN operand AND operand

  272 in_expr: operand IN '(' expr_array ')'
  273        | operand NOT IN '(' expr_array ')'

  274 case_expr: CASE expr case_check_array END
  275          | CASE expr case_check_array ELSE expr END
  276          | CASE case_check_array END
  277          | CASE case_check_array ELSE expr END

  278 case_check_array: WHEN expr THEN expr
  279                 | case_check_array WHEN expr THEN expr

  280 cast_expr: CAST '(' expr AS column_type ')'

  281 subquery_expr: EXISTS '(' select_without_paren ')'
  282              | NOT EXISTS '(' select_without_paren ')'
  283              | operand IN '(' select_without_paren ')'
  284              | operand NOT IN '(' select_without_paren ')'

  285 column_expr: IDENTIFIER
  286            | column_expr '.' IDENTIFIER
  287            | '*'
  288            | column_expr '.' '*'

  289 constant_expr: STRING
  290              | TRUE
  291              | FALSE
  292              | DOUBLE_VALUE
  293              | LONG_VALUE
  294              | DATE STRING
  295              | INTERVAL interval_expr
  296              | interval_expr
  297              | long_array_expr
  298              | double_array_expr

  299 array_expr: long_array_expr
  300           | double_array_expr

  301 long_array_expr: unclosed_long_array_expr ']'

  302 unclosed_long_array_expr: '[' LONG_VALUE
  303                         | unclosed_long_array_expr ',' LONG_VALUE

  304 double_array_expr: unclosed_double_array_expr ']'

  305 unclosed_double_array_expr: '[' DOUBLE_VALUE
  306                           | unclosed_double_array_expr ',' DOUBLE_VALUE

  307 interval_expr: LONG_VALUE SECONDS
  308              | LONG_VALUE SECOND
  309              | LONG_VALUE MINUTES
  310              | LONG_VALUE MINUTE
  311              | LONG_VALUE HOURS
  312              | LONG_VALUE HOUR
  313              | LONG_VALUE DAYS
  314              | LONG_VALUE DAY
  315              | LONG_VALUE MONTHS
  316              | LONG_VALUE MONTH
  317              | LONG_VALUE YEARS
  318              | LONG_VALUE YEAR

  319 copy_option_list: copy_option
  320                 | copy_option_list ',' copy_option

  321 copy_option: FORMAT IDENTIFIER
  322            | DELIMITER STRING
  323            | HEADER

  324 file_path: STRING

  325 if_exists: IF EXISTS
  326          | ε

  327 if_not_exists: IF NOT EXISTS
  328              | ε

  329 semicolon: ';'
  330          | ε

  331 if_not_exists_info: if_not_exists IDENTIFIER
  332                   | ε

  333 with_index_param_list: WITH '(' index_param_list ')'
  334                      | ε

  335 index_param_list: index_param
  336                 | index_param_list ',' index_param

  337 index_param: IDENTIFIER
  338            | IDENTIFIER '=' IDENTIFIER
  339            | IDENTIFIER '=' LONG_VALUE
  340            | IDENTIFIER '=' DOUBLE_VALUE

  341 index_info_list: '(' identifier_array ')' USING IDENTIFIER with_index_param_list
  342                | index_info_list '(' identifier_array ')' USING IDENTIFIER with_index_param_list


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 258
    '(' (40) 29 60 62 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 87 88 94 114 115 120 121 124 125 160 165 171 211 212 220 221 231 232 233 234 235 236 237 246 247 248 266 272 273 280 281 282 283 284 333 341 342
    ')' (41) 29 60 62 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 87 88 94 114 115 120 121 124 125 160 165 171 211 212 220 221 231 232 233 234 235 236 237 246 247 248 266 272 273 280 281 282 283 284 333 341 342
    '*' (42) 256 287 288
    '+' (43) 253 255
    ',' (44) 34 62 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 90 107 130 156 170 210 212 231 232 233 235 237 242 243 244 245 303 306 320 336
    '-' (45) 252 254
    '.' (46) 162 286 288
    '/' (47) 257
    ';' (59) 3 329
    '<' (60) 262
    '=' (61) 108 259 338 339 340
    '>' (62) 263
    '[' (91) 302 305
    ']' (93) 301 304
    error (256)
    IDENTIFIER <str_value> (258) 27 37 38 89 90 108 109 113 161 162 163 164 165 171 197 199 200 201 202 203 204 205 206 207 208 213 246 247 248 285 286 321 331 337 338 339 340 341 342
    STRING <str_value> (259) 201 206 231 232 233 234 235 236 237 266 289 294 322 324
    DOUBLE_VALUE <double_value> (260) 203 208 292 305 306 340
    LONG_VALUE <long_value> (261) 60 62 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 190 191 198 202 207 231 293 302 303 307 308 309 310 311 312 313 314 315 316 317 318 339
    CREATE (262) 27 28 29 30 31 32
    SELECT (263) 126
    INSERT (264) 92 93
    DROP (265) 109 110 111 112 113
    UPDATE (266) 105
    DELETE (267) 91
    COPY (268) 114 115
    SET (269) 105 199 200 201 202 203 204 205 206 207 208
    EXPLAIN (270) 96
    SHOW (271) 181 182 183 184 185 186 187
    ALTER (272)
    EXECUTE (273)
    PREPARE (274)
    DESCRIBE (275) 188 189 190 191 192
    UNION (276) 151 152
    ALL (277) 152
    INTERSECT (278) 153
    EXCEPT (279) 154
    FLUSH (280) 193 194 195
    USE (281) 197
    OPTIMIZE (282) 196
    DATABASE (283) 27 109
    TABLE (284) 29 30 111
    COLLECTION (285) 28 110
    TABLES (286) 182
    INTO (287) 92 93
    VALUES (288) 92
    AST (289) 98
    PIPELINE (290) 102
    RAW (291) 99
    LOGICAL (292) 100
    PHYSICAL (293) 101
    FRAGMENT (294) 103
    VIEW (295) 31 112
    INDEX (296) 32 113 192
    ANALYZE (297) 97
    VIEWS (298) 183
    DATABASES (299) 181
    SEGMENT (300) 190 191
    SEGMENTS (301) 189
    BLOCK (302) 191
    GROUP (303) 149
    BY (304) 127 149
    HAVING (305) 147
    AS (306) 30 31 163 165 171 213 280
    NATURAL (307) 172
    JOIN (308) 172 173
    LEFT (309) 175
    RIGHT (310) 176
    OUTER (311) 177
    FULL (312) 178
    ON (313) 32 113 173 199 204
    INNER (314) 174
    CROSS (315) 179
    DISTINCT (316) 139 248
    WHERE (317) 145
    ORDER (318) 127
    LIMIT (319) 135
    OFFSET (320) 137
    ASC (321) 132
    DESC (322) 133
    IF (323) 325 327
    NOT (324) 86 249 251 268 273 282 284 327
    EXISTS (325) 281 282 325 327
    IN (326) 272 273 283 284
    FROM (327) 91 115 141 266
    TO (328) 114
    WITH (329) 114 115 167 333
    DELIMITER (330) 322
    FORMAT (331) 321
    HEADER (332) 323
    CAST (333) 280
    END (334) 274 275 276 277
    CASE (335) 274 275 276 277
    ELSE (336) 275 277
    THEN (337) 278 279
    WHEN (338) 278 279
    BOOLEAN (339) 39
    INTEGER (340) 42 68 76
    INT (341) 43 69 77
    TINYINT (342) 40 66 74
    SMALLINT (343) 41 67 75
    BIGINT (344) 44 70 78
    HUGEINT (345) 45
    CHAR (346) 59 60
    VARCHAR (347) 61
    FLOAT (348) 46 71 79
    DOUBLE (349) 48 72 80
    REAL (350) 47
    DECIMAL (351) 62 63 64
    DATE (352) 49 294
    TIME (353) 50
    DATETIME (354) 51
    TIMESTAMP (355) 52
    UUID (356) 53
    POINT (357) 54
    LINE (358) 55
    LSEG (359) 56
    BOX (360) 57
    PATH (361)
    POLYGON (362)
    CIRCLE (363) 58
    BLOB (364)
    BITMAP (365)
    EMBEDDING (366) 65 66 67 68 69 70 71 72
    VECTOR (367) 73 74 75 76 77 78 79 80
    BIT (368) 65 73
    PRIMARY (369) 83 87
    KEY (370) 83 87
    UNIQUE (371) 84 88
    NULLABLE (372) 85 86 249 250
    IS (373) 249 250
    TRUE (374) 290
    FALSE (375) 291
    INTERVAL (376) 295
    SECOND (377) 308
    SECONDS (378) 307
    MINUTE (379) 310
    MINUTES (380) 309
    HOUR (381) 312
    HOURS (382) 311
    DAY (383) 314
    DAYS (384) 313
    MONTH (385) 316
    MONTHS (386) 315
    YEAR (387) 318
    YEARS (388) 317
    EQUAL (389) 260
    NOT_EQ (390) 261
    LESS_EQ (391) 264
    GREATER_EQ (392) 265
    BETWEEN (393) 271
    AND (394) 269 271
    OR (395) 270
    EXTRACT (396) 266
    LIKE (397) 267 268
    DATA (398) 193
    LOG (399) 194
    BUFFER (400) 195
    KNN (401) 231
    USING (402) 341 342
    SESSION (403) 186 199 200 201 202 203
    GLOBAL (404) 187 204 205 206 207 208
    OFF (405) 200 205
    EXPORT (406) 198
    PROFILE (407) 198
    CONFIGS (408) 184
    PROFILES (409) 185
    STATUS (410) 186 187
    SEARCH (411) 143
    MATCH (412) 232 233
    QUERY (413) 234 235
    FUSION (414) 236 237
    NUMBER (415)


Nonterminals, with rules where they appear

    $accept (176)
        on left: 0
    input_pattern (177)
        on left: 1
        on right: 0
    statement_list <stmt_array> (178)
        on left: 2 3
        on right: 1 3
    statement <base_stmt> (179)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 3
    explainable_statement <base_stmt> (180)
        on left: 16 17 18 19 20 21 22 23 24 25 26
        on right: 96
    create_statement <create_stmt> (181)
        on left: 27 28 29 30 31 32
        on right: 4 16
    table_element_array <table_element_array_t> (182)
        on left: 33 34
        on right: 29 34
    table_element <table_element_t> (183)
        on left: 35 36
        on right: 33 34
    table_column <table_column_t> (184)
        on left: 37 38
        on right: 35
    column_type <column_type_t> (185)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 37 38 280
    column_constraints <column_constraints_t> (186)
        on left: 81 82
        on right: 38 82
    column_constraint <column_constraint_t> (187)
        on left: 83 84 85 86
        on right: 81 82
    table_constraint <table_constraint_t> (188)
        on left: 87 88
        on right: 36
    identifier_array <identifier_array_t> (189)
        on left: 89 90
        on right: 87 88 90 94 165 341 342
    delete_statement <delete_stmt> (190)
        on left: 91
        on right: 9 21
    insert_statement <insert_stmt> (191)
        on left: 92 93
        on right: 11 23
    optional_identifier_array <identifier_array_t> (192)
        on left: 94 95
        on right: 31 92 93
    explain_statement <explain_stmt> (193)
        on left: 96
        on right: 12
    explain_type <explain_type_t> (194)
        on left: 97 98 99 100 101 102 103 104
        on right: 96
    update_statement <update_stmt> (195)
        on left: 105
        on right: 10 22
    update_expr_array <update_expr_array_t> (196)
        on left: 106 107
        on right: 105 107
    update_expr <update_expr_t> (197)
        on left: 108
        on right: 106 107
    drop_statement <drop_stmt> (198)
        on left: 109 110 111 112 113
        on right: 5 17
    copy_statement <copy_stmt> (199)
        on left: 114 115
        on right: 6 18
    select_statement <select_stmt> (200)
        on left: 116 117 118 119
        on right: 8 20 30 31 118 119 160
    select_with_paren <select_stmt> (201)
        on left: 120 121
        on right: 117 121
    select_without_paren <select_stmt> (202)
        on left: 122
        on right: 93 116 120 221 281 282 283 284
    select_clause_with_modifier <select_stmt> (203)
        on left: 123
        on right: 122 171
    select_clause_without_modifier_paren <select_stmt> (204)
        on left: 124 125
        on right: 118 125
    select_clause_without_modifier <select_stmt> (205)
        on left: 126
        on right: 119 123 124
    order_by_clause <order_by_expr_list_t> (206)
        on left: 127 128
        on right: 123
    order_by_expr_list <order_by_expr_list_t> (207)
        on left: 129 130
        on right: 127 130
    order_by_expr <order_by_expr_t> (208)
        on left: 131
        on right: 129 130
    order_by_type <order_by_type_t> (209)
        on left: 132 133 134
        on right: 131
    limit_expr <expr_t> (210)
        on left: 135 136
        on right: 123
    offset_expr <expr_t> (211)
        on left: 137 138
        on right: 123
    distinct <bool_value> (212)
        on left: 139 140
        on right: 126
    from_clause <table_reference_t> (213)
        on left: 141 142
        on right: 126
    search_clause <expr_t> (214)
        on left: 143 144
        on right: 126
    where_clause <expr_t> (215)
        on left: 145 146
        on right: 91 105 126
    having_clause <expr_t> (216)
        on left: 147 148
        on right: 126
    group_by_clause <expr_array_t> (217)
        on left: 149 150
        on right: 126
    set_operator <set_operator_t> (218)
        on left: 151 152 153 154
        on right: 118 119
    table_reference <table_reference_t> (219)
        on left: 155 156
        on right: 141 156
    table_reference_unit <table_reference_t> (220)
        on left: 157 158
        on right: 155 156 172 173
    table_reference_name <table_reference_t> (221)
        on left: 159 160
        on right: 157 172 173
    table_name <table_name_t> (222)
        on left: 161 162
        on right: 28 29 30 31 32 91 92 93 105 110 111 112 113 114 115 159 188 189 190 191 192 196
    table_alias <table_alias_t> (223)
        on left: 163 164 165 166
        on right: 159 160
    with_clause <with_expr_list_t> (224)
        on left: 167 168
        on right: 122
    with_expr_list <with_expr_list_t> (225)
        on left: 169 170
        on right: 167 170
    with_expr <with_expr_t> (226)
        on left: 171
        on right: 169 170
    join_clause <table_reference_t> (227)
        on left: 172 173
        on right: 158
    join_type <join_type_t> (228)
        on left: 174 175 176 177 178 179 180
        on right: 173
    show_statement <show_stmt> (229)
        on left: 181 182 183 184 185 186 187 188 189 190 191 192
        on right: 7 19
    flush_statement <flush_stmt> (230)
        on left: 193 194 195
        on right: 13 24
    optimize_statement <optimize_stmt> (231)
        on left: 196
        on right: 14 25
    command_statement <command_stmt> (232)
        on left: 197 198 199 200 201 202 203 204 205 206 207 208
        on right: 15 26
    expr_array <expr_array_t> (233)
        on left: 209 210
        on right: 126 149 210 211 212 247 248 272 273
    expr_array_list <expr_array_list_t> (234)
        on left: 211 212
        on right: 92 212
    expr_alias <expr_t> (235)
        on left: 213 214
        on right: 209 210
    expr <expr_t> (236)
        on left: 215 216 217 218 219
        on right: 108 131 135 137 145 147 173 213 214 220 231 269 270 274 275 277 278 279 280
    operand <expr_t> (237)
        on left: 220 221 222 223 224 225 226 227 228 229 230
        on right: 215 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 271 272 273 283 284
    knn_expr <expr_t> (238)
        on left: 231
        on right: 227 238 242
    match_expr <expr_t> (239)
        on left: 232 233
        on right: 228 239 243
    query_expr <expr_t> (240)
        on left: 234 235
        on right: 229 240 244
    fusion_expr <expr_t> (241)
        on left: 236 237
        on right: 230 241 245
    sub_search_array <expr_array_t> (242)
        on left: 238 239 240 241 242 243 244 245
        on right: 143 242 243 244 245
    function_expr <expr_t> (243)
        on left: 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268
        on right: 224
    conjunction_expr <expr_t> (244)
        on left: 269 270
        on right: 219
    between_expr <expr_t> (245)
        on left: 271
        on right: 218
    in_expr <expr_t> (246)
        on left: 272 273
        on right: 217
    case_expr <expr_t> (247)
        on left: 274 275 276 277
        on right: 225
    case_check_array <case_check_array_t> (248)
        on left: 278 279
        on right: 274 275 276 277 279
    cast_expr <expr_t> (249)
        on left: 280
        on right: 226
    subquery_expr <expr_t> (250)
        on left: 281 282 283 284
        on right: 216
    column_expr <expr_t> (251)
        on left: 285 286 287 288
        on right: 223 286 288
    constant_expr <const_expr_t> (252)
        on left: 289 290 291 292 293 294 295 296 297 298
        on right: 222
    array_expr <const_expr_t> (253)
        on left: 299 300
        on right: 231
    long_array_expr <const_expr_t> (254)
        on left: 301
        on right: 297 299
    unclosed_long_array_expr <const_expr_t> (255)
        on left: 302 303
        on right: 301 303
    double_array_expr <const_expr_t> (256)
        on left: 304
        on right: 298 300
    unclosed_double_array_expr <const_expr_t> (257)
        on left: 305 306
        on right: 304 306
    interval_expr <const_expr_t> (258)
        on left: 307 308 309 310 311 312 313 314 315 316 317 318
        on right: 295 296
    copy_option_list <copy_option_array> (259)
        on left: 319 320
        on right: 114 115 320
    copy_option <copy_option_t> (260)
        on left: 321 322 323
        on right: 319 320
    file_path <str_value> (261)
        on left: 324
        on right: 114 115 198
    if_exists <bool_value> (262)
        on left: 325 326
        on right: 109 110 111 112 113
    if_not_exists <bool_value> (263)
        on left: 327 328
        on right: 27 28 29 30 31 331
    semicolon (264)
        on left: 329 330
        on right: 1
    if_not_exists_info <if_not_exists_info_t> (265)
        on left: 331 332
        on right: 32
    with_index_param_list <with_index_param_list_t> (266)
        on left: 333 334
        on right: 231 341 342
    index_param_list <index_param_list_t> (267)
        on left: 335 336
        on right: 333 336
    index_param <index_param_t> (268)
        on left: 337 338 339 340
        on right: 335 336
    index_info_list <index_info_list_t> (269)
        on left: 341 342
        on right: 32 342


State 0

    0 $accept: • input_pattern $end

    CREATE    shift, and go to state 1
    INSERT    shift, and go to state 2
    DROP      shift, and go to state 3
    UPDATE    shift, and go to state 4
    DELETE    shift, and go to state 5
    COPY      shift, and go to state 6
    SET       shift, and go to state 7
    EXPLAIN   shift, and go to state 8
    SHOW      shift, and go to state 9
    DESCRIBE  shift, and go to state 10
    FLUSH     shift, and go to state 11
    USE       shift, and go to state 12
    OPTIMIZE  shift, and go to state 13
    WITH      shift, and go to state 14
    EXPORT    shift, and go to state 15
    '('       shift, and go to state 16

    $default  reduce using rule 168 (with_clause)

    input_pattern         go to state 17
    statement_list        go to state 18
    statement             go to state 19
    create_statement      go to state 20
    delete_statement      go to state 21
    insert_statement      go to state 22
    explain_statement     go to state 23
    update_statement      go to state 24
    drop_statement        go to state 25
    copy_statement        go to state 26
    select_statement      go to state 27
    select_with_paren     go to state 28
    select_without_paren  go to state 29
    with_clause           go to state 30
    show_statement        go to state 31
    flush_statement       go to state 32
    optimize_statement    go to state 33
    command_statement     go to state 34


State 1

   27 create_statement: CREATE • DATABASE if_not_exists IDENTIFIER
   28                 | CREATE • COLLECTION if_not_exists table_name
   29                 | CREATE • TABLE if_not_exists table_name '(' table_element_array ')'
   30                 | CREATE • TABLE if_not_exists table_name AS select_statement
   31                 | CREATE • VIEW if_not_exists table_name optional_identifier_array AS select_statement
   32                 | CREATE • INDEX if_not_exists_info ON table_name index_info_list

    DATABASE    shift, and go to state 35
    TABLE       shift, and go to state 36
    COLLECTION  shift, and go to state 37
    VIEW        shift, and go to state 38
    INDEX       shift, and go to state 39


State 2

   92 insert_statement: INSERT • INTO table_name optional_identifier_array VALUES expr_array_list
   93                 | INSERT • INTO table_name optional_identifier_array select_without_paren

    INTO  shift, and go to state 40


State 3

  109 drop_statement: DROP • DATABASE if_exists IDENTIFIER
  110               | DROP • COLLECTION if_exists table_name
  111               | DROP • TABLE if_exists table_name
  112               | DROP • VIEW if_exists table_name
  113               | DROP • INDEX if_exists IDENTIFIER ON table_name

    DATABASE    shift, and go to state 41
    TABLE       shift, and go to state 42
    COLLECTION  shift, and go to state 43
    VIEW        shift, and go to state 44
    INDEX       shift, and go to state 45


State 4

  105 update_statement: UPDATE • table_name SET update_expr_array where_clause

    IDENTIFIER  shift, and go to state 46

    table_name  go to state 47


State 5

   91 delete_statement: DELETE • FROM table_name where_clause

    FROM  shift, and go to state 48


State 6

  114 copy_statement: COPY • table_name TO file_path WITH '(' copy_option_list ')'
  115               | COPY • table_name FROM file_path WITH '(' copy_option_list ')'

    IDENTIFIER  shift, and go to state 46

    table_name  go to state 49


State 7

  199 command_statement: SET • SESSION IDENTIFIER ON
  200                  | SET • SESSION IDENTIFIER OFF
  201                  | SET • SESSION IDENTIFIER STRING
  202                  | SET • SESSION IDENTIFIER LONG_VALUE
  203                  | SET • SESSION IDENTIFIER DOUBLE_VALUE
  204                  | SET • GLOBAL IDENTIFIER ON
  205                  | SET • GLOBAL IDENTIFIER OFF
  206                  | SET • GLOBAL IDENTIFIER STRING
  207                  | SET • GLOBAL IDENTIFIER LONG_VALUE
  208                  | SET • GLOBAL IDENTIFIER DOUBLE_VALUE

    SESSION  shift, and go to state 50
    GLOBAL   shift, and go to state 51


State 8

   96 explain_statement: EXPLAIN • explain_type explainable_statement

    AST       shift, and go to state 52
    PIPELINE  shift, and go to state 53
    RAW       shift, and go to state 54
    LOGICAL   shift, and go to state 55
    PHYSICAL  shift, and go to state 56
    FRAGMENT  shift, and go to state 57
    ANALYZE   shift, and go to state 58

    $default  reduce using rule 104 (explain_type)

    explain_type  go to state 59


State 9

  181 show_statement: SHOW • DATABASES
  182               | SHOW • TABLES
  183               | SHOW • VIEWS
  184               | SHOW • CONFIGS
  185               | SHOW • PROFILES
  186               | SHOW • SESSION STATUS
  187               | SHOW • GLOBAL STATUS

    TABLES     shift, and go to state 60
    VIEWS      shift, and go to state 61
    DATABASES  shift, and go to state 62
    SESSION    shift, and go to state 63
    GLOBAL     shift, and go to state 64
    CONFIGS    shift, and go to state 65
    PROFILES   shift, and go to state 66


State 10
